tests/pass/single_test_output_stderr_only/identity.nim
proc identity*(n: int): int =
  stderr.writeLine "stderr here: my input is: " & $n
  stderr.flushFile
  result = n
