tests/error/runtime_error_recursion_limit_middle_test/identity.nim
func identity*(n: int): int =
  if n == 2:
    identity(n)
  else:
    n
